spring-error-usage/src/main/java/com/example/error/service/define/DataService.java
package com.example.error.service.define;

public interface DataService {
    void deleteStudent(int id);
}